syntax = "proto3";

package user;

option go_package = "entities/user;user";

message CreateUserParams {
  optional int64 bitrix_id = 1;
  string telegram_id = 2;
  string name = 3;
  string role = 4;
}

message UserResponse {
  CreateUserParams data = 1;
}

service UserService {
  rpc Create(CreateUserParams) returns (UserResponse);
}